--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,12 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.1.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.2</version>
+        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
